2008-09-29  Rodrigo Kumpera  <rkumpera@novell.com>

	* mini-codegen.c: Change asserts to use MONO_NUM_REGBANKS instead
	of a hardcoded constant.

2008-09-29  Rodrigo Kumpera  <rkumpera@novell.com>

	* method-to-ir.c (type_from_stack_type): Fix typo.

2008-09-29  Zoltan Varga  <vargaz@gmail.com>

	* mini-ia64.c (emit_move_return_value): Convert float return values to
	double.

	* objects.cs: Add a new test.
	
	* mini-ia64.c (mono_arch_allocate_vars): Disable fp elimination for
	VARARG methods to fix an assert later.

	* mini-mips.h mini-mips.c mini-ops.h cpu-mips.md: Update the mips back
	end so it at least compiles.

2008-09-28  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c (emit_optimized_ldloca_ir): Fix this.

2008-09-28  Rodrigo Kumpera  <rkumpera@novell.com>

	* method-to-ir.c (mono_method_to_ir2): Extract the ldloca + initobj
	optimization to a new function (emit_optimized_ldloca_ir) and enable
	it for both ldloca and ldloca_s.

2008-09-28  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c (mono_method_to_ir2): Remove an unnecessary assert in the
	gshared CASTCLASS code.

	* driver.c (mono_main): Add a workaround for shutdown crashes seen on
	amd64, where the libc stack unwinder encounters stack frames referring to
	native code in unmapped memory.

	* method-to-ir.c (mini_emit_check_array_type): Add support for generic
	sharing.

	* generics.cs: Add new test.

2008-09-27  Zoltan Varga  <vargaz@gmail.com>

	* mini-arm.h driver.c: Print the fp model when using --version on arm. Also,
	add a check that one of the ARM_FPU_ constants is defined.

	* mini-exceptions.c (mono_handle_soft_stack_ovf): Really fix the build.
	
	* mini-exceptions.c: Fix build on non-altstack platforms.

	* method-to-ir.c (mono_method_to_ir2): Fix aot support for the
	sharing of vtypes.

	* ir-emit.h: Add a comment to NEW_PCONST.

	* mini-exceptions.c (mono_altstack_restore_prot): Fix a warning.

	* mini.h (MonoJitDomainInfo): Move some fields here from MonoDomain.
