@@ -1,3 +1,7 @@
+2008-09-30  Zoltan Varga  <vargaz@gmail.com>
+
+	* mini-codegen.c: More fp->regbank changes.
+
 2008-09-29  Rodrigo Kumpera  <rkumpera@novell.com>
 
 	* mini-codegen.c: Change asserts to use MONO_NUM_REGBANKS instead
